# HLG_Mackey-Glass

./: .gitignore  LICENSE  README.md  fcnArousalEvent.m  fcnEMAlgorithm_TN_realData.m  fcnGetLoopGain2.m  fcnGet_unitFunction.m  fcnSetOutPath.m  main.m  mainRun.m
_original/hlg_v1/: Compute_sleep_metrics.py  Convert_SS_seg_scores.py  Create_Ventilation.py  Data_writers.py  EM_output_extraction.py  EM_output_histograms.py  (+13 more)
matlab/: README.md
python/: .gitignore  PIPELINE.md  README.md  REFACTORING_REPORT.md  pyproject.toml  pyrightconfig.json
python/data/em_example/: README.md
python/data/paper_examples/: README.md  figure1_studies.csv
python/figures/demo/: em_results_summary.csv
python/scripts/: generate_all_figures.py  run_altitude_analysis.py  run_cpap_analysis.py  run_em_extraction.py  run_em_python.py  run_end_to_end.py  run_figure1_demo.py  run_full_night_example.py  run_full_pipeline_demo.py  run_group_analysis.py  run_paper_figures.py  run_ss_relationship.py  run_stable_ss.py  update_mgh_info.py
python/src/hlg/: __init__.py  config.py  reporting.py
python/src/hlg/analysis/: __init__.py  altitude.py  cpap.py  group.py  ss_relationship.py  statistics.py
python/src/hlg/core/: __init__.py  events.py  preprocessing.py  sleep_metrics.py  ventilation.py
python/src/hlg/em/: __init__.py  arousal.py  em_algorithm.py  extraction.py  histograms.py  loop_gain.py  loop_gain_calc.py  mackey_glass.py  postprocessing.py  run_em.py
python/src/hlg/io/: __init__.py  readers.py  writers.py
python/src/hlg/ss/: __init__.py  pipeline.py  scoring.py  segmentation.py  stable.py
python/src/hlg/visualization/: __init__.py  full_night.py  histograms.py  segments.py  stable_ss.py
python/tests/: matlab_em_results.csv  test_core_events.py  validate_matlab_vs_python.m
(+27 files in other folders)
